<resources>
    <string name="app_name">Pizza Party</string>
    <string name="total_pizzas">"Total pizzas: ?"</string>
    <string name="how_hungry">"How hungry?"</string>
    <string name="number_of_people">"Number of people?"</string>
    <string name="hintNum">10</string>
    <string name="light">Light</string>
    <string name="medium">Medium</string>
    <string name="ravenous">Ravenous</string>
    <string name="calculate">Calculate</string>
    <string name="pizza_size">Pizza Size</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>

</resources>